# delimit_axiom

./: Cargo.toml  README.md
help/: deriv.c  derivative.rs  hit2.rs  hit3.rs  knot.c  knotu.c  line.rs  math.rs  rbasis.c  rbspline.c  union2.rs
src/: actor.rs  area.rs  arrow.rs  curve.rs  extrude.rs  extrusion.rs  facet.rs  gpu.rs  grid_pattern.rs  group.rs  hit.rs  lib.rs  mesh.rs  mirror.rs  model.rs  nurbs.rs  nurbs_2.rs  path.rs  pattern.rs  polyline.rs  query.rs  radial_pattern.rs  ray.rs  rays_to_curve.rs  reshape.rs  result.rs  revolve.rs  scene.rs  shape.rs  sketch.rs  slice.rs  space.rs  spatial.rs  spatial_map.rs  tolerance.rs  trim.rs  turtled.rs  union.rs  vector.rs
src/actor/: area.rs  extrude.rs  proto.rs  revolve.rs  sketch.rs  trim.rs  union.rs
src/actor/union/: union2.rs  union3.rs
src/gpu/: framebuffer.rs  shader.rs  texture.rs
src/hit/: basis3.rs  cascade.rs  flat.rs  groups.rs  hit2.rs  hit2_gpu.rs  hit3.rs  hone.rs  hone_basis.rs  shader.rs  shader_parts.rs  shader_parts2.rs  shader_parts3.rs  shaders2.rs  shaders3.rs  shapes.rs  simple.rs  spread.rs  traced.rs
src/hit/hone/: program.rs  spread.rs
src/model/: area.rs  curve.rs  extrude.rs  facet.rs  grid_pattern.rs  mirror.rs  proto.rs  radial_pattern.rs  reshape.rs  revolve.rs  sketch.rs  union.rs
src/nurbs/: curve.rs  facet.rs
src/shape/: basis.rs  group.rs  proto.rs
src/spatial/: spatial2.rs  spatial3.rs
src/union/: hit2.rs  hit3.rs  hone_prep.rs  intersection.rs  intersection2.rs  intersection3.rs  shader.rs  shader_parts.rs  texel.rs  traced.rs  union2.rs  union2_gpu.rs  union3.rs
tests/: web.rs
